objects/OPP_OpportunityCompetitor__c.object
<CustomObject>
    <description>September Release - Junction object to relate multiple Competitors to Opportunity and vice versa.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>September Release - Comments for Competitor.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitorName__c</fullName>
        <description>SEPTEMBER RELEASE - Created to display the Competitor Name to the User and clicking on the Competitor Name user will be navigate to the Opportunity Competitor detail page.</description>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300)) + Id , TECH_CompetitorName__r.Name, &apos;_parent&apos; )</formula>
        <label>Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppCompetitorExtRef__c</fullName>
        <externalId>true</externalId>
        <label>OppCompetitorExtRef</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <description>September Release - Field to store the name of an opportunity.</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Competitors</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OtherName__c</fullName>
        <description>SEPTEMBER RELEASE - Field for Other Opportunity Competitor Name.</description>
        <inlineHelpText>Introduce here the Competitor name when you cannot find it in the &quot;Competitor Name&quot; active list. In &quot;Competitor Name&quot; field please choose &quot;Other&quot; value.</inlineHelpText>
        <label>Other Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>September Release - Price for Competitor.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TECH_CompetitorName__c</fullName>
        <description>September Release - Created to associate a competitor with an opportunity.</description>
        <inlineHelpText>When the Competitor is not in the list, please choose Other as &quot;Competitor Name&quot; value and enter the exact name of the Competitor in the below &quot;Other Name&quot; field.</inlineHelpText>
        <label>Competitor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Competitor__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TECH_UniqueCompetitor__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SEPTEMBER RELEASE - Unique field to restrict user from Saving the same Competitor more than 1 time.</description>
        <externalId>true</externalId>
        <label>TECH_Unique Competitor</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Winner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>September Release - Checkbox to check the winner of the opportunity.</description>
        <label>Winner</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OCN - {0000}</displayFormat>
        <label>Opportunity Competitor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OCR_VR01_OtherCompetitorMandatory</fullName>
        <active>true</active>
        <description>SEPTEMBER RELEASE - When Competitor is Selected as Other, User has to provide the Competitor Name, Otherwise Other Name field should be blank.</description>
        <errorConditionFormula>AND(NOT($User.BypassVR__c), OR(AND(CONTAINS(LOWER(TECH_CompetitorName__r.Name), LOWER($Label.CL00519) ), ISBLANK(OtherName__c)), AND(NOT(CONTAINS(LOWER(TECH_CompetitorName__r.Name), LOWER($Label.CL00519) )), NOT(ISBLANK(OtherName__c)))))</errorConditionFormula>
        <errorDisplayField>OtherName__c</errorDisplayField>
        <errorMessage>Other Competitor Name should be populated if the competitor is selected as Other.</errorMessage>
    </validationRules>
</CustomObject>